--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="about-image" id="about">
-        <img src="images/about.jpg" alt=""/>
+        <img src="images/about.jpg" alt="man holding pen"/>
       </div>
       
       <div class="about text-block">
@@ -36,7 +36,7 @@
       </div>
 
       <div class="method-image" id="method">
-        <img src="images/method.jpg" alt=""/>
+        <img src="images/method.jpg" alt="hand and journal"/>
       </div>
 
       <div class="method text-block">
@@ -46,7 +46,7 @@
       </div>
 
       <div class="clients-image" id="clients">
-        <img src="images/clients.jpg" alt=""/>
+        <img src="images/clients.jpg" alt="man drinking coffee"/>
       </div>
 
       <div class="clients text-block">
@@ -55,7 +55,7 @@
       </div>
 
       <div class="contact-image" id="contact">
-        <img src="images/contact.jpg" alt =""/>
+        <img src="images/contact.jpg" alt ="man on the phone"/>
       </div>
 
       <div class="contact text-block">
